--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,24 @@
 
     <!--Splash Screen -->
     <string name="go_next">GO NEXT</string>
+
+    <!--MainActivity -->
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <string name="setting">Setting</string>
+    <string name="more">More</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--Home Fragment -->
+    <string name="give_rent">I will give rent</string>
+    <string name="take_rent">I will take rent</string>
+    <string name="earning_site">Earning Site</string>
+    <string name="inverstor">Investor</string>
+    <string name="comming_soon">Coming Soon</string>
+
+
+
+
 </resources>
