--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,14 @@
     <string name="profile">Profile</string>
     <string name="setting">Setting</string>
     <string name="more">More</string>
+    
+    <!--Menu Layout -->
+    <string name="post_add">Post Add</string>
+    <string name="wallet">Wallet</string>
+
+    <!-- MainActivity NavigationDrawer -->
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
