--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="profile">Profile</string>
     <string name="setting">Setting</string>
     <string name="more">More</string>
-    
+
     <!--Menu Layout -->
     <string name="post_add">Post Add</string>
     <string name="wallet">Wallet</string>
@@ -150,5 +150,21 @@
     <string name="category_fragment">CATEGORY</string>
     <string name="default_fragment">DEFAULT</string>
     <string name="home_post_show_fragment">HOME_POST</string>
+    <string name="no_network_fragment">NO_NETWORK</string>
+    <string name="connected_to_network_fragment">YES_NETWORK</string>
+    <string name="title_activity_admin">AdminActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_tools">Tools</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_send">Send</string>
 
 </resources>
